src/user.css
/* ... */
.toggle-module__toggle-indicator___nCxwE_marketplace {
  background: var(--spice-card) !important;
}

.marketplace-card--installed {
  border: 1px rgba(var(--spice-rgb-accent), 0.7) solid !important;
}

button.arrow-btn {
  background-color: var(--spice-selected-row);
  color: var(--spice-text);
}

/* spicetify extensions */

.main-topBar-button[title='Popup Lyrics'],
.main-topBar-button[title='Full App Display'],
.main-topBar-button[title='Bookmark'] {
  background-color: var(--spice-card) !important;
}

.a2ruVaZt_DdrdHz3GqgU,
.x-categoryCard-CategoryCard {
  color: var(--spice-alt-text);
}

.UyzJidwrGk3awngSGIwv,
.main-addButton-button[aria-checked='false'] {
  color: var(--spice-text);
}

/* New lyrics style */

:root {
  --lyrics-text-direction: left;
}

/* Needed for lyrics cinema */
.Root__top-bar {
  z-index: 5 !important;
  display: unset !important;
}

.main-lyricsCinema-controls {
  top: 80px !important;
}

#lyrics-backdrop {
  position: absolute;
  width: 100%;
  height: 100%;
}

#lyrics-backdrop-container {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--spice-main);
}

.lyrics-lyrics-background {
  visibility: hidden !important;
}

.lyrics-lyrics-container {
  --lyrics-color-active: rgb(255, 255, 255) !important;
  --lyrics-color-inactive: rgba(255, 255, 255, 0.35) !important;
  --lyrics-color-passed: rgba(255, 255, 255, 0.8) !important;
  --lyrics-color-messaging: rgba(255, 255, 255, 0.45) !important;
}

.lyrics-lyricsContent-lyric {
  transform-origin: var(--lyrics-text-direction);
  margin: 0.3rem 0;
  transform: scale(1);
  text-shadow: none;
  transition: transform 400ms ease, text-shadow 400ms ease, color 50ms ease;
}

/* lyrics not available message */
.C3pBU1DsOUJJOAv89ZFT {
  color: var(--lyrics-color-passed) !important;
}

.lyrics-lyricsContent-lyric:hover {
  color: var(--lyrics-color-active) !important;
}

.lyrics-lyricsContent-isInteractive:active {
  transform: scale(0.9);
}

.lyrics-lyricsContent-active {
  transform: scale(1.1);
  text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
  max-width: var(--lyrics-active-max-width);
}

/* right sidebar lyrics */
.main-nowPlayingView-lyricsContent > .lyrics-lyricsContent-lyric {
  max-width: 90% !important;
}

/* New Lyrics Plus style */

.lyrics-lyricsContainer-LyricsBackground {
  display: none !important;
}

/* hide horizontal scrollbar */
.lyrics-lyricsContainer-LyricsContainer,
.lyrics-lyricsContainer-SyncedLyricsPage {
  overflow-x: hidden;
}

.lyrics-lyricsContainer-LyricsContainer {
  --lyrics-color-active: white !important;
  --lyrics-color-inactive: rgba(255, 255, 255, 0.5) !important;
}

.lyrics-lyricsContainer-LyricsLine {
  text-shadow: none;
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
  transition-property: transform, color, opacity, text-shadow !important;
}

.lyrics-lyricsContainer-Karaoke-Word {
  transition: var(--word-duration) color ease, var(--word-duration) text-shadow ease !important;
  text-shadow: none;
}

.lyrics-lyricsContainer-Karaoke-WordActive,
.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine-active {
  text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
}

.lyrics-lyricsContainer-LyricsUnavailableMessage {
  color: rgba(255, 255, 255, 0.4) !important;
}

.lyrics-lyricsContainer-Provider {
  background: none !important;
}

/* lyrics pages fix */

.main-lyricsCinema-nonDisplayedArea .main-topBar-topbarContent {
  display: none;
}

.lyrics-lyrics-container {
  margin-top: 0;
}

.lyrics-lyricsContainer-LyricsBackground {
  margin-bottom: -110px;
  margin-top: -10px;
}

.lyrics-lyricsContainer-Provider {
  padding-bottom: 40px;
}

#lyrics-fullscreen-container
  > .lyrics-lyricsContainer-LyricsContainer:has(.lyrics-lyricsContainer-UnsyncedLyricsPage)
  .lyrics-lyricsContainer-Provider {
  padding-bottom: 35px;
}

.nav-ylx .lyrics-lyricsContainer-LyricsUnsyncedPadding {
  height: 20vh;
}

.lyrics-config-button-container {
  bottom: 15px;
}

#lyrics-fullscreen-container .lyrics-config-button-container {
  bottom: 10px;
}

#fad-lyrics-plus-container .lyrics-config-button-container {
  bottom: 32px;
}

body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > *:not(.Root__main-view),
body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > .Root__main-view
  > *:not(.main-view-container),
body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > .Root__main-view
  > .main-view-container
  > *:not(.under-main-view),
body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > .Root__main-view::before {
  display: none !important;
}

body:has(#lyrics-fullscreen-container) > #main > .Root {
  --panel-gap: 0 !important;
}

.hKccLC {
  background-color: var(--spice-accent);
  color: var(--spice-alt-text);
  border-radius: var(--border-radius-3);
}

.ksogXh:hover {
  color: var(--spice-rgb-subtext);
}

.main-view-container__scroll-node-child {
  padding-bottom: 118px;
}

.view-homeShortcutsGrid-imageContainer {
  padding: 6px;
}

.view-homeShortcutsGrid-shortcut .view-homeShortcutsGrid-image {
  border-radius: var(--border-radius-3);
}

.main-trackList-playsHeader {
  width: 12.8ch;
}

.main-trackList-durationHeader {
  margin-left: 30px;
}

.main-trackList-rowSectionEnd {
  margin: auto;
}

.main-trackList-column {
  padding-left: 10px;
}

.main-trackList-rowSectionVariable[aria-colindex='3'] .cPwEdQ,
.main-trackList-rowSectionVariable[aria-colindex='3'] .main-trackList-text {
  padding-left: 8.5px;
}

.main-trackList-rowSectionVariable[aria-colindex='4'] .eDbSCl {
  padding-left: 14.5px;
}

.main-trackList-rowSectionVariable[aria-colindex='3'] .main-trackList-rowPlayCount {
  padding-left: 0px;
}

.Kujbn0F68QOf_o44cNxw {
  background-color: var(--spice-accent) !important;
  border: 2px solid var(--spice-main) !important;
}
/* ... */

